--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ovo&display=swap');
 * {
     box-sizing: border-box;
 }
 body{
-    font-family: 'Roboto', san-serif;
+    font-family: 'Ovo', san-serif;
     background-color: rgb(51, 51, 190);
     display: flex;
     align-items: center;
@@ -28,6 +28,7 @@ h3{
     height: 100px;
     padding: 10px;
     font-size: 16px;
+    font-family: inherit
 }
 #textarea:focus{
     outline: 0;
